--- a/_posts/2022-06-02-0530-0605.md
+++ b/_posts/2022-06-02-0530-0605.md
@@ -29,3 +29,43 @@ excerpt: ""
 면접이 진행되는 동안 면접관들과 의사소통이 활발하게 이루어진다는 느낌을 받았고, 거의 모든 질문에 막힘없이 대답했기에 기분좋게 면접을 마무리지을 수 있었던 것 같다.
 
 지금까지 준비해왔던 것들에 비해서는 생각보다 쉽게 느껴져서, 모든 역량을 보여주지 못한 아쉬움이 남기는 했지만 그래도 첫 대면 면접을 기분 좋게 마무리 할 수 있어서 좋은 경험이었다고 생각한다.
+
+<br />
+<br />
+<br />
+
+## 0603
+
+# 프리뷰 그라운드 면접 후기
+
+약 2주 전에 신청했던 프리뷰 그라운드 면접이 잡히게 되어 남기게 되는 회고.  
+프리뷰 그라운드는 시니어 개발자들이 재능 봉사 차원에서 모의 면접과 멘토링을 진행해주는 서비스이다.
+
+나는 이번에 버즈빌이라는 회사의 개발자님에게 멘토링을 받게 되었는데, 멘토링 받은 내용과 회고를 정리해보고자 한다.
+
+## 면접 진행
+
+면접은 크게 라이브 코딩 테스트 20분, 프로젝트 20분, 이력서 + 웹 기술 기반 깊은 지식 확인 30분으로 진행되었다.
+
+### 라이브 코딩 테스트
+
+우선 라이브 코딩은 단방향 링크드 리스트를 인자로 받아, 중앙값을 반환하는 함수를 작성하는 것이 문제였다.  
+처음에 문제의 의도를 잘못 파악하여 배열이라 가정하고, 중앙 인덱스 값을 구해서 문제를 해결했고, 그 결과 잘못된 풀이라는 답을 들었다.  
+그제서야 문제를 제대로 파악하여, while문을 사용해 head 노드부터 다음 노드를 탐색하여 노드의 개수를 구한 뒤, 값을 반환하여 문제를 해결했다.
+
+이후 올바른 풀이라는 평가를 받고, 시간복잡도를 질문하여 답하였다.  
+문제의 효율성을 개선할 수 있는 방법에 대한 질문을 받았는데, 그 당시에는 제대로 답하지 못하였다.  
+지금와서 생각해보면 단방향 링크드 리스트는 탐색에는 적합하지 않으므로 배열을 사용하는 것이 요구한 답변인가? 하는 생각이 들었다.
+
+긍정적인 평으로는 코드의 로직을 작성하는 데에 있어 막힘없이 구현하는 것 같았고, 시간복잡도를 정확히 계산해냈다는 평을 들었다.  
+아쉽다는 평으로는 초반에 문제를 제대로 이해하지 못해 의사소통에 문제가 있나? 하는 잠깐의 의문이 들었고, 자바스크립트라는 언어 안에 종속되어있나? 하는 생각이 잠시 들었다는 평을 받았다.
+
+### 프로젝트
+
+프로젝트는 내가 진행했던 프로젝트를 기반으로 기술적으로 성취한 포인트와 그 기술에 대해 더 깊게 물어보는 식으로 진행하였다.
+
+긍정적인 평으로는 내가 사용했던 기술에 대해 깊게 이해하고 사용한다는 느낌을 받았다고 하셨다.  
+아쉽다는 평으로는 프로젝트의 기간이 짧고, 학습 위주나 마이그레이션 위주이다 보니 기술적인 어려움의 포인트들이 스코프가 작다는 느낌을 받으셨다고 했다.
+
+공부하면서 기본기를 중시해왔기에 FE의 메인 언어인 자바스크립트 위주의 프로젝트를 진행했고, 그렇다보니 화려한 기술스택을 사용하지는 못했고 커리큘럼상 진행기간이 긴 프로젝트를 수행하지 못하여 아쉬움이 남는 것은 사실이다.  
+그래서 멘토님께 그렇다면 기간을 가지고 추가적인 프로젝트를 하나 더 수행하는 것과 일단 취업을 하는 것 중 어떤 것이 더 좋다고 생각하냐고 질문했고, 일단 취업을 하는 것을 추천해주셨다.
