--- a/_posts/2022-06-02-0530-0605.md
+++ b/_posts/2022-06-02-0530-0605.md
@@ -28,7 +28,7 @@ excerpt: ""
 문제에 대한 접근법과 생각을 준비한 기술 답변과 엮어서 어필하기 위해 노력했던 것 같다.  
 면접이 진행되는 동안 면접관들과 의사소통이 활발하게 이루어진다는 느낌을 받았고, 거의 모든 질문에 막힘없이 대답했기에 기분좋게 면접을 마무리지을 수 있었던 것 같다.
 
-지금까지 준비해왔던 것들에 비해서는 생각보다 쉽게 느껴져서, 모든 역량을 보여주지 못한 아쉬움이 남기는 했지만 그래도 첫 대면 면접을 기분 좋게 마무리 할 수 있어서 좋은 경험이었다고 생각한다.
+지금까지 준비해왔던 것들에 비해서는 생각보다 어렵지 않게 느껴져서, 모든 역량을 보여주지 못했다는 아쉬움이 남기는 했지만 그래도 첫 대면 면접을 기분 좋게 마무리 할 수 있어서 좋은 경험이었다고 생각한다.
 
 <br />
 <br />
@@ -68,4 +68,23 @@ excerpt: ""
 아쉽다는 평으로는 프로젝트의 기간이 짧고, 학습 위주나 마이그레이션 위주이다 보니 기술적인 어려움의 포인트들이 스코프가 작다는 느낌을 받으셨다고 했다.
 
 공부하면서 기본기를 중시해왔기에 FE의 메인 언어인 자바스크립트 위주의 프로젝트를 진행했고, 그렇다보니 화려한 기술스택을 사용하지는 못했고 커리큘럼상 진행기간이 긴 프로젝트를 수행하지 못하여 아쉬움이 남는 것은 사실이다.  
-그래서 멘토님께 그렇다면 기간을 가지고 추가적인 프로젝트를 하나 더 수행하는 것과 일단 취업을 하는 것 중 어떤 것이 더 좋다고 생각하냐고 질문했고, 일단 취업을 하는 것을 추천해주셨다.
+그래서 멘토님께 기간을 가지고 추가적인 프로젝트를 하나 더 수행하는 것과 일단 취업을 하는 것 중 어떤 것이 더 좋다고 생각하냐고 질문했고, 일단은 취업을 하는 것이 좀 더 좋은 선택이 될 것 같다고 말씀해주셨다.
+
+### 웹 기술 + CS 질문
+
+이 시간동안은 프로젝트에서 이어진 기술들에 대해 더 깊게 뿌리내린 질문들과, 이 외의 웹과 관련된 질문들을 받게 되었다.
+
+기억나는 대표적인 질문들에는 CORS는 무엇이고 어떻게 해결하는지, 리액트의 동작 원리는 무엇이고 JS만을 사용하는 것과 무엇이 다르다고 생각하는지, 비동기적으로 관찰한다는 것이 어떤 의미인지, 타입스크립트를 사용했을 때의 장점이 무엇이라 생각하는지, SEO란 무엇인지 등이 있다. 각 질문들에서 3, 4 차례의 꼬리 질문을 받게 되었는데, 지금까지 공부해 온 내용들과 내 생각을 기반으로 답변하였다.
+
+생각보다 정말 난이도 있는 질문들이 많았기에 어려웠지만, 그래도 한 번씩은 고민해보거나 경험한 적이 있는 질문들이어서 재미있게 답변할 수 있었다.
+
+긍정적인 평으로는 질문들에 대한 답변을 들으면서 정말 깊게 공부했다는 것을 느낄 수 있었고, 그렇기에 쉬운 난이도의 질문들은 굳이 물어보지 않아도 잘 답변할 것 같다는 생각이 들었다고 하셨다.  
+아쉬운 평으로는 답변을 할 때, 긴장을 해서 그런지 설명이 매끄럽지 않은 답변이 조금 있었다고 하셨다.
+
+## 느낀 점
+
+한 시간 반 정도의 시간동안 많은 것을 느낄 수 있었고, 좋은 경험이 되었던 것 같다.  
+항상 깊게 개념을 파고드는 것을 중요시해왔기에 이 부분에서 인정 받은 점은 정말 뿌듯했다.  
+라이브 코딩을 처음 접해보았는데, 이런 식으로 파라미터가 특정 자료구조라고 가정하고 문제를 풀이한 적은 처음이라 당황스러우면서도 새로운 경험을 할 수 있었다.  
+프로젝트 내에서의 아쉬움은 나에게도 약간 남아있지만, 한편으로는 모든 것이 완벽할 수는 없다고 생각이 들었다.  
+지금 당장 부족한 점을 모두 메꾸어서 준비만 하기보다는, 이제는 직접 부딪히고 나의 강점을 강조하여 회사에 입사한 후, 서비스를 진행하며 성장하고 싶다.
