--- a/_posts/2022-06-18-0613-0619.md
+++ b/_posts/2022-06-18-0613-0619.md
@@ -24,3 +24,45 @@ excerpt: ""
 새로운 도전을 시작하며 매 회차마다 상위 3명에 선정되어 코드리뷰를 받을 수 있도록 하는 것을 목표한다.  
 지금까지 경험을 돌아봤을 때, 나는 목표가 정해지고 서로 긍정적인 자극을 줄 수 있는 환경에서 더 크게 성장했던 것 같다.  
 이번 챌린지를 마치고 회고했을 때, 기대하는 목표 세 가지를 모두 이룰 수 있도록 최선을 다해서 도전해야겠다.
+
+<br />
+<br />
+<br />
+
+## 0618
+
+# 1회차 목표
+오늘부터 2주 간 진행되는 1회차는 로그인을 위해 필요한 Data Fetching 모듈을 만들어보는 것이다.    
+주어진 인터페이스에 맞게 클래스와 함수들을 만들어보며 지속가능한 모듈 설계와 프론트엔드에서의 객체지향에 대해 고민해본다.   
+
+### 1회차 전체 목표
+1. 주어진 요구사항에 맞게 모듈 설계 및 구현
+2. react-query 학습
+3. next.js 학습
+
+
+### 1회차 1주차 목표
+1. AuthService 모듈 리팩토링 및 개선된 모듈 설계
+2. next.js 학습
+
+
+### 요일별 목표
+금) OT  
+토) 프로젝트 환경 세팅, 목표 설정  
+일) 요구 사항 파악, 코드 분석  
+월) 코드 분석, next.js 학습  
+화) AuthService 리팩토링  
+수) AuthService 개선 모듈 설계  
+목) 코드 점검 및 회고
+
+### 오늘 목표
+1. 프로젝트 환경 세팅, 목표 설정
+
+### 실제 오늘 수행 내용
+1. 프로젝트 환경 세팅, 목표 설정
+
+### 점수
+**오늘 나에게 주는 점수(5점 만점)** : 3점   
+**주간 목표 달성 가능성(5점 만점)** : 5점 
+
+
