--- a/_posts/2022-06-18-0613-0619.md
+++ b/_posts/2022-06-18-0613-0619.md
@@ -65,4 +65,32 @@ excerpt: ""
 **오늘 나에게 주는 점수(5점 만점)** : 3점   
 **주간 목표 달성 가능성(5점 만점)** : 5점 
 
+<br />
+<br />
+<br />
 
+## 0619
+
+# 회고록
+
+최근 몇 번의 면접을 진행하며 느낀 점이 있어 정리해보고자 글을 쓰게 되었다.  
+지금까지의 나는 기술 중심적인 개발자였다. 내가 어떤 경험을 해왔고, 얼마나 깊게 공부했고, 어떤 지식까지 알고 있다를 자랑하는 데에 중점을 두고 면접을 진행해왔다.  
+실제로 깊이 공부하는 것을 좋아하고, 그런 어필들이 좋은 영향을 미친다고 들어왔기에 이를 더 티내려고 애썼던 것 같다.  
+
+실제로 면접을 진행하며 기술 관련 부분은 큰 막힘없이 내 역량을 뽐내왔다고 생각gks다.  
+다만, 개발자이기 이전에 사람 이정훈의 매력을 잘 어필했었나? 생각해보면 그렇지 못했다고 말할 거 같다.  
+결국 면접이란 함께 일할 사람인지를 판가름하는 자리이고, 신입에게 요구하는 기술 수준은 최소한의 역량이며 성장 가능성을 중요시한다.  
+그런 상황에서 계속해서 '나 잘해요'라고만 말하는 것은 오히려 이 사람은 현재 수준에 만족하고 성장이 더디지 않을까 하는 의문을 줄 수 있을 거 같다.  
+
+**자신감**과 **겸손함**, '겸손하되 당당하게' 이 두 가지 키워드를 잘 보여주는 것이 중요하다고 느꼈다.  
+
+스타트업에서 일하는 분의 인터뷰 글을 찾아보다
+
+> 직무와 결과물에 과도하게 자아 투영을 하고 공동의 목표가 아니라 본인의 증명을 위해 일하면 항상 초조한 상태여서 받는 피드백에 대해 감정적으로 반응하게 되고 일에 대해 온전한 피드백을 주고받기가 어렵다.
+
+라는 내용의 글을 발견하고 찔리는 감정이 들었다.  
+공동의 목표와 나의 증명, 둘 중 하나를 선택하자면 나의 증명이 더 중요하다고 생각하며 개발자로 살아왔던 것 같아 한 대 맞은듯한 기분이 들었다.  
+왜 숲을 보지 못하고 눈 앞의 나무만 봐 왔을까 하는 생각과 약간은 태도를 바꿀 필요가 있다는 마음을 먹게 되었다.
+
+1월부터 6월까지 내 행보는 스스로 상당히 만족스럽지 못하다.  
+벌써 한 해의 절반이 지나갔지만, 아직도 절반이 남았다. 오늘부터 정말 후회없는 날들을 보낼 것이다.
