--- a/_posts/2022-07-04-0627-0703.md
+++ b/_posts/2022-07-04-0627-0703.md
@@ -64,6 +64,91 @@ hooks에서 반환된 값을 어떻게 보여줄지만 정의하면 된다.
 ### Fade In 기능 구현
 
 처음에 Fade In 기능(살짝 떠오르고, 투명도가 조절되는 애니메이션)을 구현할 때는 keyframes를 사용하여 애니메이션으로 구현한 뒤, HomePage에서 하위 3개의 컴포넌트에게 애니메이션을 동작시키도록 구현했다.  
-다만 이렇게 구현하게 된다면, 처음에 빈 화면에서 시작하는 것이 아닌 0.1초 뒤에 다음 컴포넌트가 없어졌다 다시 나타나는 방식이라는 것을 알게 되었습니다. 이는 트리플 홈페이지의 UX와는 다르다고 판단하여 delay 타임을 매개변수로 받는 useFadeIn hooks를 구현한 뒤, opacity와 translateY 값이 showComponent 상태에 따라 transition 속성을 통해 변화하도록 구현했다.  
+다만 이렇게 구현하게 된다면, 처음에 빈 화면에서 시작하는 것이 아닌 0.1초 뒤에 다음 컴포넌트가 없어졌다 다시 나타나는 방식이었기에 수정할 필요성을 느꼈다. 이는 트리플 홈페이지의 UX와는 다르다고 판단하여 delay 타임을 매개변수로 받는 useFadeIn hooks를 구현한 뒤, opacity와 translateY 값이 showComponent 상태에 따라 transition 속성을 통해 변화하도록 구현했다.  
 여기서 새롭게 알게 된 사실은 모든 컴포넌트의 Opacity를 0으로, 즉 화면에 보이는 요소가 존재하지 않는다면 첫 로딩 화면이 늦게 보이는 문제가 존재한다는 사실이다. 즉, transition을 활용하면서 좀 더 좋은 UX를 주기 위해서는 과제로 주어진 3개의 컴포넌트 외에 화면에 보이는 요소가 존재해야 더 빠르게 첫 화면이 렌더링 된다고 생각했다. 그래서 투명한 인라인 텍스트를 입력하는 임의의 HiddenBox 컴포넌트를 생성하여 이러한 문제를 해결했다.  
 물론 실제 트리플 홈페이지를 구현한다면 과제로 주어진 Section 외에도 기존에 보이는 요소들이 존재하기에 문제가 발생하지 않겠지만 현재 상황에서는 이러한 방법으로 UX를 향상시킬 수 있었다.
+
+<br />
+<br />
+<br />
+
+## 0630
+
+# 트리플 사전 과제 보완
+
+이번 트리플 과제 전형에 합격하여 과제와 관련하여 해결되지 못한 고민들을 생각해보고자 글을 작성하게 되었다.  
+컴포넌트 설계 위주로 공부하는 데에 시간을 많이 소요하여 몇몇 부분은 부족한 채 코드를 제출해야만 했는데, 운이 좋게도 과제 전형에 통과할 수 있었다.  
+그만큼 부족한 부분들을 잘 보완하여 좋은 모습을 보일 수 있도록 대비하고자 한다!
+
+## 수정할 부분
+
+### useFadeIn
+
+useFadeIn hooks에서 useEffect 내부에 setTimeout으로 타이머를 작동시켰는데, 타이머 해제를 해 주지 않았다.
+
+```typescript
+import { useEffect, useState } from "react";
+
+const useFadeIn = (delay: number) => {
+  const [showComponent, setShowComponent] = useState(false);
+
+  useEffect(() => {
+    const timeoutId = setTimeout(() => {
+      setShowComponent(true);
+    }, delay);
+
+    return () => clearTimeout(timeoutId);
+  }, []);
+
+  return [showComponent];
+};
+
+export default useFadeIn;
+```
+
+다음과 같이 코드를 작성해야 버그를 방지하고, 정확하게 원하는 시점에 렌더링 되는 hooks로 사용할 수 있다.
+
+### useCountUp
+
+```typescript
+const useCountUp = ({ start = 0, end, duration = 2000 }: Count) => {
+  const [count, setCount] = useState(start);
+
+  const requestRef = useRef(0);
+  const starttime = useRef(0);
+
+  const animate = (timestamp: number) => {
+    if (!starttime.current) starttime.current = timestamp;
+
+    const runtime = timestamp - starttime.current;
+
+    if (runtime >= duration) {
+      setCount(end);
+      return;
+    }
+
+    setCount(Math.floor(easeOutExpo(runtime, start, end, duration)));
+    requestRef.current = requestAnimationFrame(animate);
+  };
+
+  useEffect(() => {
+    requestRef.current = requestAnimationFrame(animate);
+
+    return () => cancelAnimationFrame(requestRef.current);
+  }, []);
+
+  return [count];
+};
+```
+
+- 기존의 코드는 easing 애니메이션을 적용할 유틸 함수명이 easeInExpo였다. 이는 실제로 동작하는 천천히 느려지는 애니메이션과 다르기 때문에 올바른 작명으로 변경하였다.
+- countUp 애니메이션을 구현하기 위해 requestAnimationFrame을 활용하였다. requestAnimationFrame은 프레임 생성 초기 단계에 맞춰 애니메이션 코드를 실행시킴으로써 1프레임 당 호출을 보장한다. 즉, 모니터 주사율에 따라 애니메이션 코드를 실행시키고, 사용자에게 부드러운 애니메이션 동작을 제공하는 데 유용한 함수이다. requestAnimationFrame를 사용할 때, 재귀로 호출하여 사용했어야 했는데 그렇지 않고, 잘못된 방식으로 requestAnimationFrame를 사용했기에 animate에서 재귀적으로 호출하도록 코드를 수정하였다.
+- requestAnimationFrame에 전달하는 콜백함수에는 기본적으로 timestamp라는 performance.now()와 같은 값을 반환하는 인자가 전달되는데, 이를 활용하여 animate를 반복적으로 호출할 시간을 결정했다. ref에 animate가 처음 호출된 시간을 저장한 뒤, timestamp에서 그 값을 빼면 animate가 반복 호출된 시간을 구할 수 있었다. 그 값을 duration과 비교하여 requestAnimationFrame이 끝날 조건을 계산하였다.
+- 이와 같은 방법으로 최종적으로 코드를 예상한 것과 동일하게 구현할 수 있었다.
+
+## 과제를 수행하며 배운 점
+
+1. 컴포넌트 설계 원칙
+2. requestAnimationFrame을 리액트에서 잘 사용하는 법
+3. 리액트에서 css 애니메이션과 js 애니메이션에 대한 고민
+4. vite의 매력
